--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.SignUpActivity" />
+        <activity
+            android:name=".activity.SignUpActivity"
+            android:theme="@style/NoActionBar"/>
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_main"
