--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,11 +29,16 @@
         </activity>
         <activity
             android:name=".activity.SignUpActivity"
-            android:theme="@style/NoActionBar"/>
+            android:theme="@style/NoActionBar" />
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:label="Profile"
+            android:name=".activity.ProfileActivity"
+            android:parentActivityName=".activity.MainActivity"
+            android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
