--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:label="@string/app_name"
             android:name=".activity.SignInActivity"
             android:theme="@style/NoActionBar">
             <intent-filter>
@@ -29,22 +30,37 @@
             </intent-filter>
         </activity>
         <activity
+            android:label="Cadastre-se"
             android:name=".activity.SignUpActivity"
-            android:theme="@style/NoActionBar" />
+            android:parentActivityName=".activity.SignInActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name"
+            android:label="SamuApp"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:label="Profile"
             android:name=".activity.ProfileActivity"
+            android:label="Profile"
             android:parentActivityName=".activity.MainActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme" />
 
-        <meta-data android:name="DATABASE" android:value="solicitations.db" />
-        <meta-data android:name="VERSION" android:value="1" />
-        <meta-data android:name="QUERY_LOG" android:value="true" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.example.appfirebaserest" />
+        <meta-data
+            android:name="DATABASE"
+            android:value="solicitations.db" />
+        <meta-data
+            android:name="VERSION"
+            android:value="1" />
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="true" />
+        <meta-data
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="com.example.appfirebaserest" />
+
+        <activity
+            android:label="Ocorrência"
+            android:name=".activity.SolicitationActivity"
+            android:parentActivityName=".activity.MainActivity"/>
     </application>
 
 </manifest>
