--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.appfirebaserest">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.appfirebaserest">
 
-    <!-- PERMISSOES -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -20,18 +18,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:label="@string/app_name"
             android:name=".activity.SignInActivity"
+            android:label="@string/app_name"
             android:theme="@style/NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
-            android:label="Cadastre-se"
             android:name=".activity.SignUpActivity"
+            android:label="Cadastre-se"
             android:parentActivityName=".activity.SignInActivity"
             android:theme="@style/AppTheme" />
         <activity
@@ -58,9 +52,25 @@
             android:value="com.example.appfirebaserest" />
 
         <activity
-            android:label="Ocorrência"
             android:name=".activity.SolicitationActivity"
-            android:parentActivityName=".activity.MainActivity"/>
+            android:label="Ocorrência"
+            android:parentActivityName=".activity.MainActivity" />
+
+        <activity
+            android:name=".activity.MapsActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- Chave da minha API -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDizAtmp4ocC96e1i2gl1_OOcevXAcr3bQ" />
+
     </application>
 
 </manifest>
