--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_GPS" />
+    <uses-permission android:name="android.permission.ACCESS_ASSISTED_GPS" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name="com.orm.SugarApp"
@@ -21,9 +25,7 @@
         <activity
             android:name=".activity.SignInActivity"
             android:label="@string/app_name"
-            android:theme="@style/NoActionBar">
-
-        </activity>
+            android:theme="@style/NoActionBar"></activity>
         <activity
             android:name=".activity.SignUpActivity"
             android:label="Cadastre-se"
@@ -32,7 +34,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,15 +46,18 @@
             android:label="Profile"
             android:parentActivityName=".activity.MainActivity"
             android:theme="@style/AppTheme" />
-
         <activity
             android:name=".activity.SolicitationActivity"
             android:label="Ocorrência"
             android:parentActivityName=".activity.MainActivity" />
-
         <activity
             android:name=".activity.MySolicitationsActivity"
             android:label="Minhas Ocorrências"
+            android:parentActivityName=".activity.MainActivity" />
+
+        <activity
+            android:name=".activity.PhotoActivity"
+            android:label="Capturar foto"
             android:parentActivityName=".activity.MainActivity"/>
 
         <meta-data
