--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
 
         <activity
             android:name=".activity.PhotoActivity"
-            android:label="Capturar foto"
+            android:label="Foto"
             android:parentActivityName=".activity.MainActivity"/>
 
         <meta-data
