--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,31 +25,38 @@
         <activity
             android:name=".activity.SignInActivity"
             android:label="@string/app_name"
-            android:theme="@style/NoActionBar"></activity>
-        <activity
-            android:name=".activity.SignUpActivity"
-            android:label="Cadastre-se"
-            android:parentActivityName=".activity.SignInActivity"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activity.SignUpActivity"
+            android:label="Cadastre-se"
+            android:parentActivityName=".activity.SignInActivity"
+            android:theme="@style/AppTheme" />
+
+        <activity
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+
         <activity
             android:name=".activity.ProfileActivity"
             android:label="Profile"
             android:parentActivityName=".activity.MainActivity"
             android:theme="@style/AppTheme" />
+
         <activity
             android:name=".activity.SolicitationActivity"
             android:label="Ocorrência"
             android:parentActivityName=".activity.MainActivity" />
+
         <activity
             android:name=".activity.MySolicitationsActivity"
             android:label="Minhas Ocorrências"
@@ -59,6 +66,13 @@
             android:name=".activity.PhotoActivity"
             android:label="Foto"
             android:parentActivityName=".activity.MainActivity"/>
+
+        <!-- My Receiver -->
+        <receiver android:name=".receiver.NetworkReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
 
         <meta-data
             android:name="DATABASE"
